# PX4_mavros_offboard_example

./: CMakeLists.txt  README.md  package.xml
src/: offb_node_traj.cpp
